--- a/development-team-web-app/src/main/webapp/WEB-INF/messages.properties
+++ b/development-team-web-app/src/main/webapp/WEB-INF/messages.properties
@@ -1,5 +1,6 @@
 projectDescription.empty=Please provide project's description
 projectDescription.maxSize=Project's description size have to be <= 25 symbols
+projectDescription.exist = Project with same description already exist
 developerLastName.empty=Please provide developer's LastName
 developerLastName.maxSize=Developer's LastName size have to be <= 20 symbols
 developerFirstName.empty=Please provide developer's FirstName
